--- a/projekt01-personal-training-page/style.css
+++ b/projekt01-personal-training-page/style.css
@@ -113,3 +113,61 @@ h3 {
     font-size: 1.1em;
     line-height: 1.5;
 }
+
+.angebotstabelle {
+    display: flex;
+    flex-direction: column;
+    font-size: max(1em, 1.23vw);
+}
+
+.angebotszeile {
+    display: flex;
+    padding: 2%;
+    align-items: center;
+}
+
+.angebotszeile:nth-child(2n) {
+    background-color: rgba(255, 255, 255, 0.03);
+}
+
+.angebotszeile:hover {
+    background-color: rgba(255, 255, 255, 0.06);
+}
+
+.angebotsname {
+    width: 25%;
+    font-weight: bold;
+}
+
+.angebotspreis {
+    width: 50%;
+}
+
+.angebotsbuttonspalte {
+    width: 25%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.angebotsbutton {
+    padding: 10px 20px;
+}
+
+.footer {
+    margin: 50px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;    
+}
+
+.footer-button {
+    padding: 16px 30px;
+    margin: 0 auto 20px auto;
+    border: 5px solid silver;
+    font-size: x-large;
+}
+
+.social-link {
+   text-decoration: none; 
+}
